# rawg-notion-integration

./: .gitignore  LICENSE  README.md  full-properties.json  main.py  pyproject.toml  readme.txt  summary_of_coding.txt
cli/: __init__.py  main.py
config/: __init__.py
core/: __init__.py
gui/: __init__.py  quick_add.py
notion_integration/: notion_api.py
plugins/: __init__.py
plugins/games_rawg/: __init__.py  game_dto.py  game_simple_dto.py  rawg_api.py
rawg_integration/: game_dto.py  rawg_api.py
web/: __init__.py
